<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F4F6F8"
    android:padding="14dp">

    <TextView
        android:id="@+id/txtTituloPrincipal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recursos_aprendizaje"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="#1E293B"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp" />

    <EditText
        android:id="@+id/edtBuscar"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:hint="@string/buscar_hint"
        android:padding="12dp"
        android:background="@android:drawable/edit_text"
        android:layout_marginBottom="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <Button
            android:id="@+id/btnBuscar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buscar"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnAgregar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/agregar"
            android:textAllCaps="false"
            android:layout_marginStart="8dp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnVerFavoritos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ver_favoritos"
        android:textAllCaps="false"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cerrar_sesion"
        android:textAllCaps="false"
        android:layout_marginBottom="8dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerRecursos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>